# autoorder-secretmagic

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd-dev.yml  ci.yml
docs/: CI_CD.md  CONFIGURATION.md  DATABASE_METADATA.md  MESSENGER.md  RELEASE_PROCESS.md
scripts/db/init/: 001_logs_schema.sql  002_clients_schema.sql  003_processing_history.sql  004_config.sql
scripts/starrocks/init/: 001_dim_calendar.sql  002_dim_address.sql
src/: main.py
src/config/: settings.py
src/database/: postgres.py  starrocks.py
src/domain/: __init__.py  client.py  config.py  geocode.py  processing.py
src/events/: client.py  publisher.py  subscriber.py
src/features/: calendar.py  sales.py
src/handlers/: __init__.py  event_handler.py
src/logger/: __init__.py  logger.py  postgres_writer.py  types.py
src/pipeline/: processor.py
src/repository/: __init__.py  address_repository.py  calendar_repository.py  client_repository.py  config_repository.py  processing_repository.py
src/services/: geocoder.py
